# py-sandbox

./: .gitignore  main.py  pyproject.toml  switcher.py
notebook/pca/: pca_baddata_uber.ipynb  pca_iris.ipynb
tfidf/: tfidf.py  tfidfprogram.py
wikipedia/: dump.py
