[tool.poetry]
name = "py-sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
numpy = "^1.22.0"
scipy = "^1.7.3"
scikit-learn = "^1.0.2"
pandas = "^1.3.5"
geopy = "^2.2.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
